se cambio fecha de cierre

--- a/app/index.html
+++ b/app/index.html
@@ -58,7 +58,7 @@
           <div class="col-md-4">
             <img src="images/pasotres.svg">
             <p class="titulo-pasos">Anuncio del ganador</p> 
-            <p class="add-top-separation">28 de marzo</p>
+            <p class="add-top-separation">13 de abril</p>
           </div>
         </div>
       </div>
