--- a/app/instrucciones.html
+++ b/app/instrucciones.html
@@ -76,7 +76,7 @@
 				<ul style="list-style-type:disc">
 					<li>Se dará seguimiento al reto con 4 talleres básicos de apertura                     (desde cosas hacer solicitudes de datos hasta talleres específicos                      de web scrapping, etc).</li> 
 					<li>Al final de las cuatro semanas se premiará a la persona que                          abrió y solicitó más datos.</li>
-					<li>El último día para abrir datos es el 26 de Marzo a las 11:59                        PM.</li>
+					<li>El último día para abrir datos es el 10 de abril a las 11:59                        PM.</li>
 					<li>Premios:
 						</br>- Primer Lugar de Apertura: Computadora. 
 						</br>- Primer Lugar de Solicitudes: Tablet.
